--- a/kadai-css.css
+++ b/kadai-css.css
@@ -5,19 +5,21 @@ header {
     background-color: #ffcccc;
 }
 
-#wrapper{
-    display:flex;
+#wrapper {
+    width: 1000px;
+    display: flex;
 }
 
 #main {
     width: 700px;
     background-color:#ccffcc;
+    display: block;
 }
 
 #menu {
     width: 300px;
     background-color:#ccccff;
-    
+    display: block;
 }
 
 footer {
